# mwtest

./: Cargo.toml  apps.json  ci.json  comparer_paths.example.ini  dev-releaseunicode.json  mwtest-compare.py  nightly.json  profile.xml  tests.json
config/: apps.json  ci.json  dev-releaseunicode.json  nightly.json  quickstart.json
lib/: xge_lib.rs
py/: adaptors.py  apps.json  comparer_paths.example.ini  config.py  mwtest-compare.py  mwtest.py  profile.xml  report.py  xge-tmp.bat  xge.py
py/StartDebuggerSource/: StartDebugger.sln
py/StartDebuggerSource/StartDebugger/: PickVsInstanceDialog.Designer.cs  PickVsInstanceDialog.cs  Process.cs  Program.cs  RunningObjectTable.cs  StartDebugger.csproj  VisualStudioAutomation.cs
py/StartDebuggerSource/StartDebugger/Properties/: AssemblyInfo.cs
py/build_types/: dev-debugunicode.json  dev-releaseunicode.json  quickstart.json
py/presets/: all.json  ci.json  nightly.json
src/: config.rs  main.rs  report.rs  runnable.rs  scheduler.rs  svn.rs
