[package]
name = "mwtest"
version = "0.1.0"
authors = ["Fabian Beckmann <fb@phaseq.de>"]
edition = "2018"
default-run = "mwtest"

[dependencies]
structopt = "0.3.16"
regex = "1.3.9"
uuid = { version = "0.8.1", features = ["v4"] }
term_size = "0.3.2"
serde_json = "1.0.57"
serde_derive = "1.0.114"
serde = "1.0.114"
glob = "0.3.0"
num_cpus = "1.13.0"
htmlescape = "0.3.1"
futures = "0.3.5"

[dependencies.tokio]
version = "0.2.22"
features = ["net", "process", "io-util", "time"]

[lib]
name = "xge_lib"
path = "lib/xge_lib.rs"

#[profile.release]
#lto = true
#opt-level = 'z'
#codegen-units = 1
#panic = 'abort'