[package]
name = "mwtest"
version = "0.1.0"
authors = ["Fabian Beckmann <fb@phaseq.de>"]
edition = "2018"
default-run = "mwtest"

[dependencies]
structopt = "0.3.21"
regex = "1.4.3"
uuid = { version = "0.8.2", features = ["v4"] }
term_size = "0.3.2"
serde_json = "1.0.61"
serde_derive = "1.0.123"
serde = "1.0.123"
glob = "0.3.0"
num_cpus = "1.13.0"
htmlescape = "0.3.1"
futures = "0.3.12"
serde-xml-rs = "0.4.1"
color-eyre = "0.5.10"
itertools = "0.10.0"
relative-path = "1.3.2"
remove_dir_all = "0.6.1"

[dependencies.tokio]
version = "1.1.0"
features = ["net", "process", "io-util", "rt", "rt-multi-thread", "time", "macros"]

[lib]
name = "xge_lib"
path = "lib/xge_lib.rs"

[dev-dependencies]
serial_test = "0.5.1"

#[profile.release]
#lto = true
#opt-level = 'z'
#codegen-units = 1
#panic = 'abort'