[package]
name = "mwtest"
version = "0.1.0"
authors = ["Fabian Beckmann <fb@phaseq.de>"]
edition = "2018"
default-run = "mwtest"

[dependencies]
structopt = "0.3.21"
regex = { version = "1.4.3", default-features = false, features = ["std", "perf"] }
uuid = { version = "0.8.2", features = ["v4"] }
term_size = { version = "0.3.2", default-features = false }
serde_json = { version = "1.0.62", default-features = false, features = ["std"] }
serde = { version = "1.0.123", default-features = false, features = ["derive"] }
glob = { version = "0.3.0", default-features = false }
num_cpus = { version = "1.13.0", default-features = false }
htmlescape = { version = "0.3.1", default-features = false }
futures = { version = "0.3.12", default-features = false, features = ["alloc"] }
serde-xml-rs = { version = "0.4.1", default-features = false }
#color-eyre = { version = "0.5.10", default-features = false }
itertools = { version = "0.10.0", default-features = false, features = ["use_alloc"] }
relative-path = { version = "1.3.2", default-features = false }
remove_dir_all = { version = "0.6.1", default-features = false }
simple-eyre = "0.3.0"

[dependencies.tokio]
version = "1.2.0"
features = ["net", "process", "io-util", "rt", "rt-multi-thread", "time", "macros"]
default-features = false

[lib]
name = "xge_lib"
path = "lib/xge_lib.rs"

[dev-dependencies]
serial_test = "0.5.1"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
panic = 'abort'
